--- a/BootcampManagementWebAPI/Client/Views/Classes/Index.cshtml
+++ b/BootcampManagementWebAPI/Client/Views/Classes/Index.cshtml
@@ -20,6 +20,9 @@
                     Batch
                 </th>
                 <th>
+                    Employee
+                </th>
+                <th>
                     Action
                 </th>
             </tr>
@@ -58,6 +61,13 @@
                             <option>Select</option>
                         </select>
                         <span style="color:red" class="error">Select Batch</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="Employee_Id">Employee</label>
+                        <select id="Employee" data-placement="Choose Employee" class="form-control">
+                            <option>Select</option>
+                        </select>
+                        <span style="color:red" class="error">Select Employee</span>
                     </div>
                 </form>
             </div>
