--- a/BootcampManagementWebAPI/Client/Views/Batches/Index.cshtml
+++ b/BootcampManagementWebAPI/Client/Views/Batches/Index.cshtml
@@ -50,12 +50,12 @@
                     </div>
                     <div class="form-group">
                         <label for="DateStart">Date Start</label>
-                        <input type="date" class="form-control" id="DateStart" placeholder="Date Start" />
+                        <input type="text" class="form-control" id="DateStart" placeholder="Date Start" />
                         <span style="color:red" class="error">Date must not be null or whitespace</span>
                     </div>
                     <div class="form-group">
                         <label for="DateEnd">Date End</label>
-                        <input type="date" class="form-control" id="DateEnd" placeholder="Date End" />
+                        <input type="text" class="form-control" id="DateEnd" placeholder="Date End" />
                         <span style="color:red" class="error">Date must not be null or whitespace</span>
                     </div>
                 </form>
@@ -76,5 +76,21 @@
 <script src="~/Scripts/DataTable/jquery.dataTables.min.js"></script>
 <link href="~/Scripts/DataTable/jquery.dataTables.min.css" rel="stylesheet" />
 <script src="~/Scripts/Retrieves/RetrievingBatch.js"></script>
+<link href="~/Scripts/DatePicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+<script src="~/Scripts/DatePicker/bootstrap-datepicker.min.js"></script>
+<script type="text/javascript">
+        $(function () {
+            $('#DateStart').datepicker({
+                format: "mm/dd/yyyy"
+            })
+        })
+</script>
+<script type="text/javascript">
+        $(function () {
+            $('#DateEnd').datepicker({
+                format: "mm/dd/yyyy"
+            })
+        })
+</script>
     @Scripts.Render("~/bundles/jqueryval")
 }
