--- a/BootcampManagementWebAPI/Client/Views/Lessons/Index.cshtml
+++ b/BootcampManagementWebAPI/Client/Views/Lessons/Index.cshtml
@@ -23,6 +23,9 @@
                     Department
                 </th>
                 <th>
+                    Employee
+                </th>
+                <th>
                     Date
                 </th>
                 <th>
@@ -62,7 +65,7 @@
                     </div>
                     <div class="form-group">
                         <label for="Date">Date</label>
-                        <input type="date" class="form-control" id="Date" placeholder="Date" />
+                        <input type="text" class="form-control" id="Date" placeholder="Date" />
                         <span style="color:red" class="error">Valid Date required</span>
                     </div>
                     <div class="form-group">
@@ -71,6 +74,13 @@
                             <option>Select</option>
                         </select>
                         <span style="color:red" class="error">Select Department</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="Employee_Id">Employee</label>
+                        <select id="Employee" data-placement="Choose Employee" class="form-control">
+                            <option>Select</option>
+                        </select>
+                        <span style="color:red" class="error">Select Employee</span>
                     </div>
 
                 </form>
@@ -91,5 +101,14 @@
 <script src="~/Scripts/DataTable/jquery.dataTables.min.js"></script>
 <link href="~/Scripts/DataTable/jquery.dataTables.min.css" rel="stylesheet" />
 <script src="~/Scripts/Retrieves/RetrievingLesson.js"></script>
+<script src="~/Scripts/DatePicker/bootstrap-datepicker.min.js"></script>
+<link href="~/Scripts/DatePicker/bootstrap-datepicker.min.css" rel="stylesheet" />>
+<script type="text/javascript">
+        $(function () {
+            $('#Date').datepicker({
+                format: "mm/dd/yyyy"
+            })
+        })
+</script>
     @Scripts.Render("~/bundles/jqueryval")
 }
