--- a/BootcampManagementWebAPI/Client/Views/Schedules/Index.cshtml
+++ b/BootcampManagementWebAPI/Client/Views/Schedules/Index.cshtml
@@ -70,12 +70,12 @@
                     </div>
                     <div class="form-group">
                         <label for="DateStart">Date Start</label>
-                        <input type="date" class="form-control" id="DateStart" placeholder="DateStart" />
+                        <input type="text" class="form-control" id="DateStart" placeholder="Date Start" />
                         <span style="color:red" class="error">Valid DateStart required</span>
                     </div>
                     <div class="form-group">
                         <label for="DateEnd">Date End</label>
-                        <input type="date" class="form-control" id="DateEnd" placeholder="DateEnd" />
+                        <input type="text" class="form-control" id="DateEnd" placeholder="Date End" />
                         <span style="color:red" class="error">Valid DateEnd required</span>
                     </div>
                     
@@ -97,5 +97,21 @@
 <script src="~/Scripts/DataTable/jquery.dataTables.min.js"></script>
 <link href="~/Scripts/DataTable/jquery.dataTables.min.css" rel="stylesheet" />
 <script src="~/Scripts/Retrieves/RetrievingSchedule.js"></script>
+<script src="~/Scripts/DatePicker/bootstrap-datepicker.min.js"></script>
+<link href="~/Scripts/DatePicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+<script type="text/javascript">
+        $(function () {
+            $('#DateStart').datepicker({
+                format: "mm/dd/yyyy"
+            })
+        })
+</script>
+<script type="text/javascript">
+        $(function () {
+            $('#DateEnd').datepicker({
+                format: "mm/dd/yyyy"
+            })
+        })
+</script>
     @Scripts.Render("~/bundles/jqueryval")
 }
